feat: get replay list (#8)
* feat: implement get replay list

* feat: add get replay list on handler

* feat: add get replay list command cli

* refactor: rename GetReplayByProject to plural

* feat: update proto format

* feat: add day limits on list replay

* fix: linter

* feat: bump proto commit
